--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ description = "A more memory efficient replacement for serde_json::Value"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 tracing = ["mockalloc/tracing"]
+thread_unsafe = []
 
 [dependencies]
+hashbrown = "0.13.2"
 dashmap = { version = "5.4", features = ["raw-api"] }
 lazy_static = "1.4.0"
 serde = "1.0.117"
@@ -23,3 +25,4 @@ ctor = { version = "0.1.16", optional = true }
 mockalloc = "0.1.2"
 ctor = "0.1.16"
 rand = "0.8.4"
+
