--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -65,6 +65,21 @@ jobs:
           command: test
           args: -- --test-threads=1
 
+  test_thread_unsafe:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --features thread_unsafe -- --test-threads=1
+
   test_miri:
     name: Test (Miri)
     runs-on: ubuntu-latest
