--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4.0"
 serde = "1.0.117"
 serde_json = "1.0.59"
 ctor = { version = "0.1.16", optional = true }
+indexmap = { version = "2.0.0", optional = true }
 
 [dev-dependencies]
 mockalloc = "0.1.2"
