--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,13 @@ serde = "1.0.173"
 serde_json = "1.0.103"
 ctor = { version = "0.2.4", optional = true }
 indexmap = { version = "2.0.0", optional = true }
+rkyv = { version = "0.7", default-features = false, features = ["std", "size_64"] }
+size-of = { git = "https://github.com/gz/size-of.git", rev = "3ec40db" }
 
 [dev-dependencies]
 mockalloc = "0.1.2"
 ctor = "0.1.16"
 rand = "0.8.4"
+
+[patch.crates-io]
+rkyv = { git = "https://github.com/gz/rkyv.git", rev = "3d3fd86" }
